--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -20,4 +20,7 @@
 
     <!-- Color of the FOD view -->
     <color name="config_fodColor">#FF00CC00</color>
+
+    <!-- Allow devices to use unordinary cutout overlays -->
+    <bool name="config_customCutout">true</bool>
 </resources>
