--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -29,4 +29,10 @@
     <dimen name="tri_state_up_dialog_position_l">270.375px</dimen>
     <dimen name="tri_state_up_dialog_position_deep">21.0px</dimen>
     <dimen name="tri_state_up_dialog_position_deep_land">21.0px</dimen>
+
+    <!-- Custom cutout overlay view sizes -->
+    <dimen name="config_customCutoutTopWidth">240.0px</dimen>
+    <dimen name="config_customCutoutTopHeight">240.0px</dimen>
+    <dimen name="config_customCutoutBottomWidth">240.0px</dimen>
+    <dimen name="config_customCutoutBottomHeight">240.0px</dimen>
 </resources>
