--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -373,4 +373,12 @@
     <!-- The default peak refresh rate for a given device. Change this value if you want to allow
          for higher refresh rates to be automatically used out of the box -->
     <integer name="config_defaultPeakRefreshRate">60</integer>
+
+    <!-- Default radius of the software rounded corners. -->
+    <dimen name="rounded_corner_radius">42px</dimen>
+
+    <!-- Radius of the software rounded corners at the bottom of the display
+         in its natural orientation. If zero, the value of rounded_corner_radius is used. -->
+    <dimen name="rounded_corner_radius_bottom">85px</dimen>
+
 </resources>
