guacamoleb: overlay: Use wake-up proxmity sensor

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -374,4 +374,6 @@
 
     <!-- Whether to show a custom view for FOD -->
     <bool name="config_needCustomFODView">true</bool>
+
+    <bool name="config_deviceHaveWakeUpProximity">true</bool>
 </resources>
