--- a/overlay/packages/apps/DeviceParts/res/values/config.xml
+++ b/overlay/packages/apps/DeviceParts/res/values/config.xml
@@ -21,6 +21,8 @@
 
     <!-- Path to devices High Brigness Mode toggle file -->
     <string name="pathHBMModeToggle">/sys/devices/platform/soc/ae00000.qcom,mdss_mdp/drm/card0/card0-DSI-1/hbm</string>
+    <string name="hbmOFF">"0"</string>
+    <string name="hbmON">"5"</string>
 
     <!-- Path to devices SRGBMode toggle file -->
     <string name="pathSRGBModeToggle">/sys/devices/platform/soc/ae00000.qcom,mdss_mdp/drm/card0/card0-DSI-1/native_display_srgb_color_mode</string>
