--- a/overlay/packages/apps/DeviceParts/res/values/config.xml
+++ b/overlay/packages/apps/DeviceParts/res/values/config.xml
@@ -19,6 +19,9 @@
 
     <bool name="config_device_has_hw_nav_buttons">false</bool>
 
+    <!-- Path to devices single-tap toggle file -->
+    <string name="pathSTapToggle">/proc/touchpanel/single_tap_enable</string>
+
     <!-- Path to devices High Brigness Mode toggle file -->
     <string name="pathHBMModeToggle">/sys/devices/platform/soc/ae00000.qcom,mdss_mdp/drm/card0/card0-DSI-1/hbm</string>
     <string name="hbmOFF">"0"</string>
