guacamoleb: PartsBin: support fastcharge
Change-Id: Ie1be5d0ce368c9fd144e639bab895b21f659ea1c

--- a/overlay/packages/apps/PartsBin/res/values/config.xml
+++ b/overlay/packages/apps/PartsBin/res/values/config.xml
@@ -42,4 +42,7 @@
     <integer name="vibratorMinMV">0</integer>
     <integer name="vibratorMaxMV">5</integer>
     <integer name="vibratorDefaultMV">3</integer>
+
+    <!-- Path to devices FastCharge sysfs -->
+    <string name="pathFastChargeToggle">/sys/kernel/fast_charge/force_fast_charge</string>
 </resources>
