guacamoleb: PartsBin: overlay gesture paths
Change-Id: I1e56f4a4a284b984e48fef1b8a5d8925fef729bf

--- a/overlay/packages/apps/PartsBin/res/values/config.xml
+++ b/overlay/packages/apps/PartsBin/res/values/config.xml
@@ -45,4 +45,17 @@
 
     <!-- Path to devices FastCharge sysfs -->
     <string name="pathFastChargeToggle">/sys/kernel/fast_charge/force_fast_charge</string>
+
+    <!-- Device Gesture Paths -->
+    <string name="pathGestureCircle">/proc/touchpanel/letter_o_enable</string>
+    <string name="pathGestureDoubleSwipe">/proc/touchpanel/double_swipe_enable</string>
+    <string name="pathGestureLeftArrow">/proc/touchpanel/left_arrow_enable</string>
+    <string name="pathGestureRightArrow">/proc/touchpanel/right_arrow_enable</string>
+    <string name="pathGestureDownSwipe">/proc/touchpanel/down_swipe_enable</string>
+    <string name="pathGestureUpSwipe">/proc/touchpanel/up_swipe_enable</string>
+    <string name="pathGestureLeftSwipe">/proc/touchpanel/left_swipe_enable</string>
+    <string name="pathGestureRightSwipe">/proc/touchpanel/right_swipe_enable</string>
+    <string name="pathGestureM">/proc/touchpanel/letter_m_enable</string>
+    <string name="pathGestureS">/proc/touchpanel/letter_s_enable</string>
+    <string name="pathGestureW">/proc/touchpanel/letter_w_enable</string>
 </resources>
