guacamoleb: use pressed image
Change-Id: I1a9e532605f5895a825f2de1e6be06a943a98111

--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -23,4 +23,7 @@
 
     <!-- Allow devices to use unordinary cutout overlays -->
     <bool name="config_customCutout">true</bool>
+
+    <!-- Whether to use fingerprint pressed image -->
+    <bool name="config_fodPressedImage">true</bool>
 </resources>
