--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -16,6 +16,42 @@
 */
 -->
 <resources>
-    <dimen name="rounded_corner_content_padding">18dp</dimen>
+    <dimen name="rounded_corner_content_padding">8.0dip</dimen>
     <dimen name="system_icons_keyguard_padding_end">16dp</dimen>
+    <dimen name="status_bar_extra_padding">8dp</dimen>
+
+    <!-- Custom cutout overlay view sizes -->
+    <dimen name="config_customCutoutTopWidth">240.0px</dimen>
+    <dimen name="config_customCutoutTopHeight">240.0px</dimen>
+    <dimen name="config_customCutoutBottomWidth">240.0px</dimen>
+    <dimen name="config_customCutoutBottomHeight">240.0px</dimen>
+
+    <!-- Tri-state UI -->
+    <dimen name="tri_state_down_dialog_position">423.0px</dimen>
+    <dimen name="tri_state_down_dialog_position_l">270.375px</dimen>
+    <dimen name="tri_state_middle_dialog_position">296.0px</dimen>
+    <dimen name="tri_state_middle_dialog_position_l">270.375px</dimen>
+    <dimen name="tri_state_up_dialog_position">165.0px</dimen>
+    <dimen name="tri_state_up_dialog_position_l">270.375px</dimen>
+    <dimen name="tri_state_up_dialog_position_deep">21.0px</dimen>
+    <dimen name="tri_state_up_dialog_position_deep_land">21.0px</dimen>
+
+    <!-- FOD recognizing animation -->
+    <dimen name="fod_animation_size">550.0px</dimen>
+    <dimen name="fod_animation_offset">20.0px</dimen>
+
+    <!-- Bottom margin size when fingerprint in display is active -->
+    <dimen name="keyguard_indication_margin_bottom_fingerprint_in_display">25dp</dimen>
+
+    <!-- The minimum bottom margin of the keyguard security container -->
+    <dimen name="kg_security_container_min_bottom_margin">560px</dimen>
+
+    <!-- TrustDrawable: Minimum inner radius of the breathing animation -->
+    <dimen name="trust_circle_inner_radius_visible_min">18dp</dimen>
+
+    <!-- TrustDrawable: Maximum inner radius of the breathing animation -->
+    <dimen name="trust_circle_inner_radius_visible_max">20dp</dimen>
+
+    <!-- TrustDrawable: Inner radius at the end of the exit animation -->
+    <dimen name="trust_circle_inner_radius_exit">32dp</dimen>
 </resources>
